--- a/content/about/mooc.html
+++ b/content/about/mooc.html
@@ -40,30 +40,33 @@
 </span>
 
 <ul class="basicText normalText smallText">
-  <li>
-      Evaluation of Undiagnosed and Rare Conditions – Offered by <b>Undiagnosed Diseases Network (UDN)</b>
-  </li>
-  <li>
-      <b>Natural Language Processing</b> in TensorFlow – Offered by DeepLearning.AI at Coursera
-  </li>
-  <li>
-      <b>R Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
-  </li>
-  <li>
-   <b>Python Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
-  </li>
-  <li>
-   Introduction to Programming with <b>MATLAB</b> – Offered by Vanderbilt University at Coursera
-  </li>
-  <li>
-   <b>Deep Learning</b> Specialization (x5 courses) – Offered by DeepLearning.AI at Coursera
-  </li>
-  <li>
-   <b>Artificial Intelligence</b> for Everyone – Offered by DeepLearning.AI at Coursera
-  </li>
-  <li>
-   How to <b>Build a Startup</b> – Offered by The Lean LaunchPad at Udacity
-  </li>
+    <li>
+        Evaluation of Undiagnosed and Rare Conditions – Offered by <b>Undiagnosed Diseases Network (UDN)</b>
+    </li>
+    <li>
+        Introduction to Mathematical Thinking – Offered by <b>Stanford University</b> at Coursera
+    </li>
+    <li>
+        <b>Artificial Intelligence</b> for Everyone – Offered by DeepLearning.AI at Coursera
+    </li>
+    <li>
+        <b>Deep Learning</b> Specialization (x5 courses) – Offered by DeepLearning.AI at Coursera
+    </li>
+    <li>
+        <b>Natural Language Processing</b> in TensorFlow – Offered by DeepLearning.AI at Coursera
+    </li>
+    <li>
+        <b>Python Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
+    </li>
+    <li>
+        <b>R Programming</b> tracks and individual courses (>40 hours) – Offered by DataCamp
+    </li>
+    <li>
+        Introduction to Programming with <b>MATLAB</b> – Offered by Vanderbilt University at Coursera
+    </li>
+    <li>
+        How to <b>Build a Startup</b> – Offered by The Lean LaunchPad at Udacity
+    </li>
 </ul>
 
 </html>
