--- a/content/about/experience.html
+++ b/content/about/experience.html
@@ -1,68 +1,144 @@
 <html lang="en">
 
+<style>
+  .tableContainer {
+    margin-left: .75pt;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: none;
+  }
 
-<p class=MsoNormal style='margin-bottom:0in'>Teaching</p>
+  .cell {
+    vertical-align: top;
+    width: 9in;
+    border: none;
+    padding: 0in 5.4pt 0in 5.4pt;
+    height: 15.75pt;
+  }
 
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Content designer and lecturer, <b>“Bioinformatics for All, RNA-seq data analysis”</b>, Goodarzi Lab, UCSF – Summer 2022
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Bootcamp designer and lecturer, <b>“Introduction to RNA-seq data analysis”</b>, Gilbert Lab, UCSF – Summer 2020
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Teaching Assistant for <b>Molecular Genetics</b>, University of Tehran – Spring 2019
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Teaching Assistant for <b>Mathematics I</b>, University of Tehran – Fall 2014
- </li>
-</ul>
+  .basicText {
+    margin-bottom: 0in;
+    color: black;
+  }
+
+  .normalText {
+    font-style: normal;
+    line-height: 115%;
+  }
+
+  .boldText {
+    font-weight: bold;
+    line-height: 115%;
+  }
+
+  .smallText {
+    font-size: 10.0pt;
+    line-height: 115%;
+  }
+
+  .midText {
+    font-size: 12.0pt;
+    line-height: 115%;
+  }
+
+  .largeText {
+    font-size: 14.0pt;
+    line-height: 115%;
+  }
+</style>
+
+<table class="tableContainer" border="0" cellspacing="0" cellpadding="0" width="715">
+  <!-- Teaching -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+     <p class="basicText normalText largeText">
+      <b>Teaching:</b>
+     </p>
+     <ul class="basicText normalText midText">
+      <li>
+          Mentored <b>rotation student</b> Meri Okorie,
+          <b>Analysis of pooled RNA-seq dataset for drug screening</b>, Goodarzi Lab, UCSF – Winter 2022
+         </li>
+      <li>
+       Mentored <b>high school student</b> Sonakshi Bhalla,
+       <b>Implement a WES analytic pipeline</b>, Goodarzi Lab, UCSF – Winter 2022
+      </li>
+      <li>
+       Content designer and lecturer,
+       <b>“Bioinformatics for All, RNA-seq data analysis”</b>, Goodarzi Lab, UCSF – Summer 2022
+      </li>
+      <li>
+       Bootcamp designer and lecturer,
+       <b>“Introduction to RNA-seq data analysis”</b>, Gilbert Lab, UCSF – Summer 2020
+      </li>
+      <li>
+       Teaching Assistant for <b>Molecular Genetics</b>, University of Tehran – Spring 2019
+      </li>
+      <li>
+       Teaching Assistant for <b>Mathematics I</b>, University of Tehran – Fall 2014
+      </li>
+     </ul>
+    </td>
+  </tr>
+
+ <!--  Honors and Awards -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+     <p class="basicText normalText largeText">
+      <b>Honors and Awards:</b>
+     </p>
+     <ul class="basicText normalText midText">
+      <li>
+       Funded Post-bac Fellow,
+       Summer Institute in Biomedical Informatics (SIBMI), Harvard Medical School – 2019.
+      </li>
+      <li>
+      2nd team at Startup Weekend, 2nd Young Scientists Festival, University of Tehran – 2018.
+      </li>
+      <li>
+       Awarded student journal of science, Iranian National Student Journals Festival – 2016; 2017.<br>
+       - DeNA issue 14 – Roles: Editor-in-chief and layout design<br>
+       - DeNA issue 10 – Roles: Secretory, interviewer, and layout design<br>
+      </li>
+      <li>
+       Awarded for the Best Innovative Idea, Domestic Festival at University of Tehran – 2016.<br>
+       Title: “A development roadmap of scientific student associations”
+      </li>
+      <li>
+       2nd team, Hamnet Entrepreneurship Event, Isfahan branch of National Foundation of Elites – 2015.
+      </li>
+      <li>
+       Honored to join high School for the Gifted, National Organization for Development of Exceptional Talents (Sampad) – 2009.      </li>
+      </li>
+     </ul>
+    </td>
+  </tr>
 
 
-<p class=MsoNormal style='margin-bottom:0in'>Honors and Awards</p>
+ <!--  Volunteer Activities and Hobbies -->
+  <tr style="height:15.75pt">
+    <td class="cell">
+     <p class="basicText normalText largeText">
+      <b>Volunteer Activities and Hobbies:</b>
+     </p>
+     <ul class="basicText normalText midText">
+      <li>
+       Secretory, Editor in Chief, or author at DeNA, Student Journal of Biology, University of Tehran – June 2014 - June 2020<br>
+       - Arab A, Pursue problem-solving biology: What I’ve learned at Harvard, DeNA 22 (2020)<br>
+       - Arab A, Interview with Dr. Mohsen Khosravi M.D., Ph.D., “The Inception of being a Researcher”, DeNA 15 (2016)<br>
+       - Jadidi M, Arab A, CRISPR Gene Therapy System: Novel Tools to Treat Complex Diseases, DeNA 15, (2016)<br>
+       - Arab A, Interview with Dr. Hani Goodarzi Ph.D., “Todays Scientists Social Status”, DeNA 10 (2014)
+      </li>
+      <li>
+       Member of Student Association of Biology, University of Tehran – June 2014 - June 2017
+      </li>
+      <li>
+         Basketball – player at high school and university college teams, Kong-Fu Toa, Mountain Bike
+      </li>
+     </ul>
+    </td>
+  </tr>
 
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  4000$ NIH Fund Post-bac Fellow, Summer Institute in Biomedical Informatics – 2019
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  2nd team at Startup Weekend, 2nd Young Scientists Festival, University of Tehran – 2018
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  DeNA issue 14, 2nd best student journal of science, Titr10 National Student Journals Festival – 2017
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  DeNA issue 14, 1st best student journal of science, Jahesh, Domestic Festival at University of Tehran – 2017<br>
-  <i>Editor in chief and layout design</i>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Awarded for the Best Innovative Idea, Jahesh Domestic Festival, University of Tehran – 2016<br>
-  Title: <i>“A development roadmap of scientific student associations”</i>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  DeNA issue 10, Awarded student journal of science, Titr9 National Student Journals Festival – 2016<br>
-  <i>Secretory, interviewer, and layout design</i>
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  2nd team, Hamnet Entrepreneurship Event, Isfahan branch of National Foundation of Elites – 2015
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Honored to join high School for the Gifted, National Organization for Development of Exceptional Talents (Sampad) – 2009
- </li>
-</ul>
-
-<p class=MsoNormal style='margin-bottom:0in'>Volunteer activities and hobbies</p>
-
-<ul>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Member of Student Association of Biology, University of Tehran – June 2014 - June 2017
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Secretory and Editor in Chief at DeNA, Student Journal of Biology, University of Tehran (Bi-Annual Publication) – June 2014 - June 2017
- </li>
- <li style='font-size:9.0pt;line-height:115%width=300'>
-  Basketball – player at high school and university college teams, Kong-Fu Toa, Mountain Bike
- </li>
-</ul>
+</table>
 
 </html>
