--- a/content/about/experience.html
+++ b/content/about/experience.html
@@ -90,30 +90,29 @@
      <ul class="basicText normalText midText">
       <li>
        Funded Post-bac Fellow,
-       Summer Institute in Biomedical Informatics (SIBMI), Harvard Medical School – 2019.
+       <b>Summer Institute in Biomedical Informatics (SIBMI), Harvard Medical School</b> – 2019.
       </li>
       <li>
-      2nd team at Startup Weekend, 2nd Young Scientists Festival, University of Tehran – 2018.
+       2<sup>nd</sup> team at <b>Startup Weekend</b>, 2<sup>nd</sup> Young Scientists Festival, University of Tehran – 2018.
       </li>
       <li>
-       Awarded student journal of science, Iranian National Student Journals Festival – 2016; 2017.<br>
+       Awarded student journal of science, <b>Iranian National Student Journals Festival</b> – 2016; 2017.<br>
        - DeNA issue 14 – Roles: Editor-in-chief and layout design<br>
        - DeNA issue 10 – Roles: Secretory, interviewer, and layout design<br>
       </li>
       <li>
-       Awarded for the Best Innovative Idea, Domestic Festival at University of Tehran – 2016.<br>
+       Awarded for the <b>Best Innovative Idea</b>, Domestic Festival at University of Tehran – 2016.<br>
        Title: “A development roadmap of scientific student associations”
       </li>
       <li>
-       2nd team, Hamnet Entrepreneurship Event, Isfahan branch of National Foundation of Elites – 2015.
+       2nd team, Hamnet <b>Entrepreneurship Event</b>, Isfahan branch of National Foundation of Elites – 2015.
       </li>
       <li>
-       Honored to join high School for the Gifted, National Organization for Development of Exceptional Talents (Sampad) – 2009.      </li>
+       Honored to join <b>high School for the Gifted</b>, National Organization for Development of Exceptional Talents (Sampad) – 2009.
       </li>
      </ul>
     </td>
   </tr>
-
 
  <!--  Volunteer Activities and Hobbies -->
   <tr style="height:15.75pt">
