--- a/content/about/experience.html
+++ b/content/about/experience.html
@@ -87,7 +87,7 @@
      <p class="basicText normalText largeText">
       <b>Honors and Awards:</b>
      </p>
-     <ul class="basicText normalText midText">
+     <ul class="basicText normalText smallText">
       <li>
        Funded Post-bac Fellow,
        <b>Summer Institute in Biomedical Informatics (SIBMI), Harvard Medical School</b> – 2019.
@@ -120,7 +120,7 @@
      <p class="basicText normalText largeText">
       <b>Volunteer Activities and Hobbies:</b>
      </p>
-     <ul class="basicText normalText midText">
+     <ul class="basicText normalText smallText">
       <li>
        Secretory, Editor in Chief, or author at DeNA, Student Journal of Biology, University of Tehran – June 2014 - June 2020<br>
        - Arab A, Pursue problem-solving biology: What I’ve learned at Harvard, DeNA 22 (2020)<br>
