--- a/content/about/experience.html
+++ b/content/about/experience.html
@@ -54,7 +54,7 @@
      <p class="basicText normalText largeText">
       <b>Teaching:</b>
      </p>
-     <ul class="basicText normalText midText">
+     <ul class="basicText normalText smallText">
       <li>
           Mentored <b>rotation student</b> Meri Okorie,
           <b>Analysis of pooled RNA-seq dataset for drug screening</b>, Goodarzi Lab, UCSF – Winter 2022
@@ -122,11 +122,11 @@
      </p>
      <ul class="basicText normalText smallText">
       <li>
-       Secretory, Editor in Chief, or author at DeNA, Student Journal of Biology, University of Tehran – June 2014 - June 2020<br>
-       - Arab A, Pursue problem-solving biology: What I’ve learned at Harvard, DeNA 22 (2020)<br>
-       - Arab A, Interview with Dr. Mohsen Khosravi M.D., Ph.D., “The Inception of being a Researcher”, DeNA 15 (2016)<br>
-       - Jadidi M, Arab A, CRISPR Gene Therapy System: Novel Tools to Treat Complex Diseases, DeNA 15, (2016)<br>
-       - Arab A, Interview with Dr. Hani Goodarzi Ph.D., “Todays Scientists Social Status”, DeNA 10 (2014)
+       Secretory, Editor-in-Chief, or author at DeNA, Student Journal of Biology, University of Tehran – June 2014 - June 2020<br>
+       - <b>Arab A</b>, Pursue problem-solving biology: What I’ve learned at Harvard, DeNA 22 (2020)<br>
+       - <b>Arab A</b>, Interview with Dr. Mohsen Khosravi M.D., Ph.D., “The Inception of being a Researcher”, DeNA 15 (2016)<br>
+       - Jadidi M, <b>Arab A</b>, CRISPR Gene Therapy System: Novel Tools to Treat Complex Diseases, DeNA 15, (2016)<br>
+       - <b>Arab A</b>, Interview with Dr. Hani Goodarzi Ph.D., “Todays Scientists Social Status”, DeNA 10 (2014)
       </li>
       <li>
        Member of Student Association of Biology, University of Tehran – June 2014 - June 2017
