--- a/content/about/experience.html
+++ b/content/about/experience.html
@@ -122,7 +122,7 @@
      </p>
      <ul class="basicText normalText smallText">
       <li>
-       Secretory, Editor-in-Chief, or author at DeNA, Student Journal of Biology, University of Tehran – June 2014 - June 2020<br>
+       Secretory, Editor-in-Chief, or author at DeNA, Student Journal of Biology, University of Tehran<br>
        - <b>Arab A</b>, Pursue problem-solving biology: What I’ve learned at Harvard, DeNA 22 (2020)<br>
        - <b>Arab A</b>, Interview with Dr. Mohsen Khosravi M.D., Ph.D., “The Inception of being a Researcher”, DeNA 15 (2016)<br>
        - Jadidi M, <b>Arab A</b>, CRISPR Gene Therapy System: Novel Tools to Treat Complex Diseases, DeNA 15, (2016)<br>
