--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -55,32 +55,26 @@
             <b>Pre-prints:</b>
             <ul class="basicText normalText midText">
                 <li>
-                    <b>Arab A</b>*, Ge A*, Dai R*, et al.,
+                    <b>Arab A</b>*, Ge A*, Dai R*, <i>et al.</i>,
                     A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
                     <i>bioRxiv</i> (2022) | doi:
                     <a href="https://doi.org/10.1101/2022.12.14.518457">10.1101/2022.12.14.518457</a><br>
                     <b>* equal contribution first authors</b>
                 </li>
                 <li>
-                    Hsiung CC, Wilson CM, Sambold NA, Dai R, Chen Q, Misiukiewicz S, <b>Arab A</b>, et al.,
+                    Hsiung CC, Wilson CM, Sambold NA, Dai R, Chen Q, Misiukiewicz S, <b>Arab A</b>, <i>et al.</i>,
                     Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
                     <i>bioRxiv</i> (2023)† | doi:
                     <a href="https://doi.org/10.1101/2023.09.18.558350">10.1101/2023.09.18.558350</a><br>
                     <b>† under review in Nature Biotechnology</b>
                 </li>
                 <li>
-                    Richter M, …, <b>Arab A</b>, et al.,
+                    Richter M, …, <b>Arab A</b>, <i>et al.</i>,
                     Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin
                     chemotherapy toxicity,
                     bioRxiv (2023) | doi:
                     <i>bioRxiv</i> (2023) | doi:
                     <a href="https://doi.org/10.1101/2023.03.08.531806">10.1101/2023.03.08.531806</a>
-                </li>
-                <li>
-                    Arshadi AK, Salem M, Karner H, Garcia K, <b>Arab A</b>, et al., Functional microRNA-Targeting Drug Discovery by
-                    Graph-Based Deep Learning,
-                    <i>bioRxiv</i> (2023) | doi:
-                    <a href="https://doi.org/10.1101/2023.01.13.524005">10.1101/2023.01.13.524005</a>
                 </li>
             </ul>
     </td>
@@ -93,38 +87,44 @@
             <b>Published:</b>
             <ul class="basicText normalText midText">
                 <li>
-                    Majd H, Amin S, Ghazizadeh Z, ..., <b>Arab A</b>, et al.,
+                    Arshadi AK, Salem M, Karner H, Garcia K, <b>Arab A</b>, <i>et al.</i>, Functional microRNA-Targeting Drug Discovery by
+                    Graph-Based Deep Learning,
+                    <i>Patterns</i> (2024) | doi:
+                    <a href="https://doi.org/10.1016/j.patter.2023.100909">10.1016/j.patter.2023.100909</a>
+                </li>
+                <li>
+                    Majd H, Amin S, Ghazizadeh Z, ..., <b>Arab A</b>, <i>et al.</i>,
                     Deriving Schwann cells from hPSCs enables disease modeling and drug discovery for
                     diabetic peripheral neuropathy,
                     Cell Stem Cell (2023) |
                     doi: <a href="https://doi.org/10.1016/j.stem.2023.04.006">10.1016/j.stem.2023.04.006</a>.
                 </li>
                 <li>
-                    Xiao J, Sharma U, <b>Arab A</b>, et al.,
+                    Xiao J, Sharma U, <b>Arab A</b>, <i>et al.</i>,
                     Propagated circulating tumor cells uncovers the role of NFκB and COP1 in metastasis,
                     Cancers (2023) |
                     doi: <a href="https://doi.org/10.1038/s41467-022-29587-9">10.1038/s41467-022-29587-9</a>.
                 </li>
                 <li>
-                    Furuya H, Sasaki Y, Chen R, ..., <b>Arab A</b>, et al.,
+                    Furuya H, Sasaki Y, Chen R, ..., <b>Arab A</b>, <i>et al.</i>,
                     PAI-1 is a potential transcriptional silencer that supports bladder cancer cell activity,
                     Nature Scientific Reports (2022) |
                     doi: <a href="https://doi.org/10.1038/s41598-022-16518-3">10.1038/s41598-022-16518-3</a>.
                 </li>
                 <li>
-                    Yogodzinski C, <b>Arab A</b>, et al.,
+                    Yogodzinski C, <b>Arab A</b>, <i>et al.</i>,
                     A global cancer data integrator reveals principles of synthetic lethality, sex disparity and immunotherapy,
                     Genome Medicine (2021) |
                     doi: <a href="https://doi.org/10.1186/s13073-021-00987-8">10.1186/s13073-021-00987-8</a>.
                 </li>
                 <li>
-                    Zhu X, Chudnovskiy A, Baudrier L, ..., <b>Arab A</b>, et al.,
+                    Zhu X, Chudnovskiy A, Baudrier L, ..., <b>Arab A</b>, <i>et al.</i>,
                     Functional Genomics In Vivo Reveal Metabolic Dependencies of Pancreatic Cancer Cells,
                     Cell Metabolism (2020) |
                     doi: <a href="https://doi.org/10.1016/j.cmet.2020.10.017">10.1016/j.cmet.2020.10.017</a>.
                 </li>
                 <li>
-                    Tabibkhooei A, Izadpanahi M, <b>Arab A</b>, et al.,
+                    Tabibkhooei A, Izadpanahi M, <b>Arab A</b>, <i>et al.</i>,
                     Profiling of novel circulating microRNAs as a non-invasive biomarker in diagnosis and follow-up
                     of high and low-grade gliomas,
                     Clinical Neurology and Neurosurgery (2020) |
