add phd education

--- a/content/about/education.html
+++ b/content/about/education.html
@@ -59,6 +59,29 @@
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="boldText largeText">
+        University of California, San Francisco
+      </p>
+      <p class="basicText midText">
+        <i>PhD, Pharmaceutical Sciences and Pharmacogenomics (PSPG)</i>
+      </p>
+      <p class="basicText normalText midText">
+        Fall Rotation: <a href="https://docpollard.org/">Pollard Lab</a>
+        Winter Rotation: <a href="https://shokatlab.ucsf.edu/">Shokat Lab</a>
+      </p>
+    </td>
+    <td class="locationCell">
+      <p class="basicText largeText"><br></p>
+      <p class="basicText midText">
+        San Francisco, CA
+      </p>
+      <p class="basicText smallText">
+        <i>Sep 2024 - Present</i>
+      </p>
+    </td>
+
+  <tr style="height:15.75pt">
+    <td class="cell">
+      <p class="boldText largeText">
         Department of Life Science Engineering | University of Tehran
       </p>
       <p class="basicText midText">
