--- a/content/about/education.html
+++ b/content/about/education.html
@@ -66,6 +66,8 @@
       </p>
       <p class="basicText normalText midText">
         Fall Rotation: <a href="https://docpollard.org/">Pollard Lab</a>
+      </p>
+      <p class="basicText normalText midText">
         Winter Rotation: <a href="https://shokatlab.ucsf.edu/">Shokat Lab</a>
       </p>
     </td>
