--- a/content/about/research.html
+++ b/content/about/research.html
@@ -295,7 +295,7 @@
   <tr style="height:15.75pt">
     <td class="cell">
       <p class="boldText midText">
-        <a href="">Goodarzi Lab</a>
+        <a href="https://arcinstitute.org/labs/goodarzilab">Goodarzi Lab</a>
       </p>
       <p class="basicText midText">
         Title: Junior Specialist II
