--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -47,49 +47,50 @@
 </style>
 
 <table class="tableContainer" border="0" cellspacing="0" cellpadding="0" width="715">
-  <!-- Pre-prints -->
+  <!-- Pre-prints
   <tr style="height:15.75pt">
     <td class="cell">
         <p class="basicText normalText largeText">
             <b>Pre-prints:</b>
             <ul class="basicText normalText midText">
-                <li>
-                    <b>Arab A</b>*, Ge A*, Dai R*, <i>et al.</i>,
-                    A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
-                    <i>bioRxiv</i> (2022) | doi:
-                    <a href="https://doi.org/10.1101/2022.12.14.518457">10.1101/2022.12.14.518457</a><br>
-                    <b>* equal contribution first authors</b>
-                </li>
-                <li>
-                    Hsiung CC, Wilson CM, Sambold NA, Dai R, Chen Q, Misiukiewicz S, <b>Arab A</b>, <i>et al.</i>,
-                    Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
-                    <i>bioRxiv</i> (2023)† | doi:
-                    <a href="https://doi.org/10.1101/2023.09.18.558350">10.1101/2023.09.18.558350</a><br>
-                    <b>† under review in Nature Biotechnology</b>
-                </li>
-                <li>
-                    Richter M, …, <b>Arab A</b>, <i>et al.</i>,
-                    Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin
-                    chemotherapy toxicity,
-                    bioRxiv (2023) | doi:
-                    <i>bioRxiv</i> (2023) | doi:
-                    <a href="https://doi.org/10.1101/2023.03.08.531806">10.1101/2023.03.08.531806</a>
-                </li>
+
             </ul>
     </td>
   </tr>
+ -->
 
   <!-- Published -->
   <tr style="height:15.75pt">
     <td class="cell">
         <p class="basicText normalText largeText">
-            <b>Published:</b>
+            <!-- <b>Published:</b> -->
+            <b>Publications:</b>
             <ul class="basicText normalText midText">
+                <li>
+                    <b>Arab A</b>*, Ge A*, Dai R*, <i>et al.</i>,
+                    A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
+                    <i>Scientific Reports</i> (2024) | doi:
+                    <a href="https://doi.org/10.1038/s41598-024-77314-9"></a><br>10.1038/s41598-024-77314-9
+                    <b>* equal contribution first authors</b>
+                </li>
+                <li>
+                    Hsiung CC, Wilson CM, Sambold NA, Dai R, Chen Q, Misiukiewicz S, <b>Arab A</b>, <i>et al.</i>,
+                    Higher-order combinatorial chromatin perturbations by engineered CRISPR-Cas12a for functional genomics,
+                    <i>Nature Biotechnology</i> (2024) | doi:
+                    <a href="https://doi.org/10.1038/s41587-024-02224-0">10.1038/s41587-024-02224-0</a><br>
+                </li>
                 <li>
                     Arshadi AK, Salem M, Karner H, Garcia K, <b>Arab A</b>, <i>et al.</i>, Functional microRNA-Targeting Drug Discovery by
                     Graph-Based Deep Learning,
                     <i>Patterns</i> (2024) | doi:
                     <a href="https://doi.org/10.1016/j.patter.2023.100909">10.1016/j.patter.2023.100909</a>
+                </li>
+                <li>
+                    Richter M, …, <b>Arab A</b>, <i>et al.</i>,
+                    Inhibition of muscarinic receptor signaling protects human enteric inhibitory neurons against platin
+                    chemotherapy toxicity,
+                    <i>bioRxiv</i> (2023) | doi:
+                    <a href="https://doi.org/10.1101/2023.03.08.531806">10.1101/2023.03.08.531806</a>
                 </li>
                 <li>
                     Majd H, Amin S, Ghazizadeh Z, ..., <b>Arab A</b>, <i>et al.</i>,
