--- a/content/about/publications.html
+++ b/content/about/publications.html
@@ -70,7 +70,7 @@
                     <b>Arab A</b>*, Ge A*, Dai R*, <i>et al.</i>,
                     A multiomics approach reveals RNA dynamics promotes cellular sensitivity to DNA hypomethylation,
                     <i>Scientific Reports</i> (2024) | doi:
-                    <a href="https://doi.org/10.1038/s41598-024-77314-9"></a><br>10.1038/s41598-024-77314-9
+                    <a href="https://doi.org/10.1038/s41598-024-77314-9">10.1038/s41598-024-77314-9</a><br>
                     <b>* equal contribution first authors</b>
                 </li>
                 <li>
