add fungi poster

--- a/content/about/presentations.html
+++ b/content/about/presentations.html
@@ -71,10 +71,16 @@
         <p class="basicText normalText largeText">
             <b>Conferences:</b>
             <ul class="basicText normalText midText">
+                <li><b>Arab A</b>, O'loughlin T, Jost M, Youngblut N, Li N, Gilbert LA, 
+                  A path toward development of FunGI – Functional Genomics Interpreter,
+                  Poster Presentation, <i>Biological Data Science Conference</i>,
+                  Cold Spring Harbor Laboratory (2024)
+                </li>
                 <li><b>Arab A</b>, Gilbert L,
                     Integrative systems biology approach reveals RNA dynamics that promote cellular sensitivity to
                     DNA hypomethylation as potential to design new combination therapy strategies,
-                    Poster Presentation, <i>Bay Area RNA Club 2023</i>, UCSF, San Francisco (2023)
+                    Poster Presentation, <i>Bay Area RNA Club 2023</i>,
+                    UCSF, San Francisco (2023)
                 </li>
                 <li><b>Arab A</b>, Gilbert L,
                     A multiomics approach identifies genes potentially regulated through RNA m<sup>6</sup>A methylation
