--- a/content/about/presentations.html
+++ b/content/about/presentations.html
@@ -47,7 +47,7 @@
 </style>
 
 <table class="tableContainer" border="0" cellspacing="0" cellpadding="0" width="715">
-  <!-- Talks -->
+  <!-- Talks
   <tr style="height:15.75pt">
     <td class="cell">
         <p class="basicText normalText largeText">
@@ -64,7 +64,7 @@
                     M.Sc. seminar at the University of Tehran (Fall 2020)
             </ul>
     </td>
-    </tr>
+    </tr> -->
     <!-- Conferences -->
     <tr style="height:15.75pt">
     <td class="cell">
