--- a/content/about/experience.html
+++ b/content/about/experience.html
@@ -88,6 +88,11 @@
      </p>
      <ul class="basicText normalText smallText">
       <li>
+       Awardee,
+       <a href="https://jxtxfoundation.org/news/2024-11-jxtx-bds-awardees/">
+       <b>JXTX + CSHL Biological Data Science 2024</b></a>, The JXTX Foundation – 2024.
+      </li>
+      <li>
        Funded Post-bac Fellow,
        <b>Summer Institute in Biomedical Informatics (SIBMI), Harvard Medical School</b> – 2019.
       </li>
